--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,7 @@ trigger:
 - '*'
 
 variables:
+  buildConfiguration: 'Release'
   webRepository: 'web'
   tag: '$(Build.BuildId)'
   dockerRegistryServiceConnection: '7937ec07-a9df-4ae3-9269-1895d030d87a'
@@ -40,5 +41,5 @@ stages:
     - task: AzureWebAppContainer@1
       inputs:
        appName: $(WebAppName)
-       azureSubscription: 'Resource Manager - Tailspin - Space Game'
+       azureSubscription: 'Azure subscription 1'
        imageName: $(RegistryName)/$(webRepository):$(build.buildId)
