Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,5 +41,5 @@ stages:
     - task: AzureWebAppContainer@1
       inputs:
        appName: $(WebAppName)
-       azureSubscription: 'Azure subscription 1'
+       azureSubscription: 'Nodejs Demo App'
        imageName: $(RegistryName)/$(webRepository):$(build.buildId)
